// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > enrichTestContext > should generate the expected TestContext structure with values 1`] = `
{
  "commandName": "checkScreen",
  "framework": "mocha",
  "instanceData": {
    "app": "myApp.apk",
    "browser": {
      "name": "chrome",
      "version": "114",
    },
    "deviceName": "Pixel_5",
    "isAndroid": true,
    "isIOS": false,
    "isMobile": true,
    "platform": {
      "name": "android",
      "version": "13.0",
    },
  },
  "parent": "Login tests",
  "tag": "login-screen",
  "title": "should show login screen",
}
`;

exports[`utils > getFolders > should be able to return the correct folders when method options are provided 1`] = `
{
  "actualFolder": "methodActual",
  "baselineFolder": "methodBase",
  "diffFolder": "methodDiff",
}
`;

exports[`utils > getFolders > should be able to return the correct folders when no method options are provided 1`] = `
{
  "actualFolder": "folderActual",
  "baselineFolder": "/current/test/path/",
  "diffFolder": "folderDiff",
}
`;

exports[`utils > getInstanceData > should return instance data for a mobile app with incomplete capability data 1`] = `
{
  "appName": "",
  "browserName": "not_known",
  "browserVersion": "not_known",
  "deviceName": "not_known",
  "devicePixelRatio": 3.5,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 200,
      "width": 100,
    },
    "statusBar": {
      "height": 144,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 3.5,
  "isAndroid": true,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "not_known",
  "platformVersion": "not_known",
}
`;

exports[`utils > getInstanceData > should return instance data for an Android mobile app 1`] = `
{
  "appName": "android.apk",
  "browserName": "not_known",
  "browserVersion": "not_known",
  "deviceName": "android emulator",
  "devicePixelRatio": 3.5,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 200,
      "width": 100,
    },
    "statusBar": {
      "height": 144,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 3.5,
  "isAndroid": true,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "android",
  "platformVersion": "14.0",
}
`;

exports[`utils > getInstanceData > should return instance data for an iOS iPad mobile app 1`] = `
{
  "appName": "ios.zip",
  "browserName": "not_known",
  "browserVersion": "not_known",
  "deviceName": "ipad",
  "devicePixelRatio": 0,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 834,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 9,
      "width": 276,
      "x": 279,
      "y": 1179,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 1194,
      "width": 834,
    },
    "statusBar": {
      "height": 24,
      "width": 834,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 834,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 0,
  "isAndroid": false,
  "isIOS": true,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "ios",
  "platformVersion": "17.0",
}
`;

exports[`utils > getInstanceData > should return instance data for an iOS iPad mobile app for a non matching screensize 1`] = `
{
  "appName": "ios.zip",
  "browserName": "not_known",
  "browserVersion": "not_known",
  "deviceName": "ipad",
  "devicePixelRatio": 0,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 1234,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 888,
      "width": 1234,
    },
    "statusBar": {
      "height": 20,
      "width": 1234,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 1234,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 0,
  "isAndroid": false,
  "isIOS": true,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "ios",
  "platformVersion": "17.0",
}
`;

exports[`utils > getInstanceData > should return instance data for an iOS iPad mobile app in landscape mode 1`] = `
{
  "appName": "ios.zip",
  "browserName": "not_known",
  "browserVersion": "not_known",
  "deviceName": "ipad",
  "devicePixelRatio": 0,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 1194,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 9,
      "width": 318,
      "x": 438,
      "y": 819,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 834,
      "width": 1194,
    },
    "statusBar": {
      "height": 24,
      "width": 1194,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 1194,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 0,
  "isAndroid": false,
  "isIOS": true,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "ios",
  "platformVersion": "17.0",
}
`;

exports[`utils > getInstanceData > should return instance data for an iOS iPhone mobile app 1`] = `
{
  "appName": "ios.zip",
  "browserName": "not_known",
  "browserVersion": "not_known",
  "deviceName": "iphone 15 pro",
  "devicePixelRatio": 0,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 393,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 9,
      "width": 143,
      "x": 125,
      "y": 837,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 852,
      "width": 393,
    },
    "statusBar": {
      "height": 59,
      "width": 393,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 393,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 0,
  "isAndroid": false,
  "isIOS": true,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "ios",
  "platformVersion": "17.0",
}
`;

exports[`utils > getInstanceData > should return instance data when the browserstack capabilities are provided 1`] = `
{
  "appName": "not_known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "samsung galaxy s22",
  "devicePixelRatio": 3.5,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 200,
      "width": 100,
    },
    "statusBar": {
      "height": 50,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 3.5,
  "isAndroid": true,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not_known",
}
`;

exports[`utils > getInstanceData > should return instance data when the lambdatest capabilities are provided 1`] = `
{
  "appName": "not_known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "samsung galaxy s22 lt",
  "devicePixelRatio": 3.5,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 200,
      "width": 100,
    },
    "statusBar": {
      "height": 50,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 3.5,
  "isAndroid": true,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": {
    "deviceName": "Samsung Galaxy S22 LT",
    "platformVersion": "11",
  },
  "platformName": "osx",
  "platformVersion": "11",
}
`;

exports[`utils > getInstanceData > should return instance data when the minimum of capabilities is provided 1`] = `
{
  "appName": "not_known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "not_known",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": false,
  "isIOS": false,
  "isMobile": false,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not_known",
}
`;

exports[`utils > getInstanceData > should return instance data when wdio-ics option log name is provided 1`] = `
{
  "appName": "not_known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "not_known",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": false,
  "isIOS": false,
  "isMobile": false,
  "logName": "wdio-ics-logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not_known",
}
`;

exports[`utils > getInstanceData > should return instance data when wdio-ics option name is provided 1`] = `
{
  "appName": "not_known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "not_known",
  "devicePixelRatio": 1,
  "deviceRectangles": {
    "bottomBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "leftSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "rightSidePadding": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "screenSize": {
      "height": 0,
      "width": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBarAndAddressBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "viewport": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "initialDevicePixelRatio": 1,
  "isAndroid": false,
  "isIOS": false,
  "isMobile": false,
  "logName": "",
  "name": "wdio-ics-name",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not_known",
}
`;

exports[`utils > getLtOptions > should return the lt:options when it exists (correct casing) 1`] = `
{
  "project": "testProject",
  "user": "wim",
}
`;

exports[`utils > getLtOptions > should return the lt:options when it exists (different casing) 1`] = `
{
  "project": "testUpper",
  "user": "upperCase",
}
`;
